k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saintblitz-service
spec:
  selector:
    app: saintblitz
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
